# zkastle

./: .gitignore  LICENSE  README  README.md  pnpm-lock.yaml  vercel.json
api/: Cargo.toml  vercel.json
api/src/: main.rs
client/: App.tsx  bun.lockb  dojo.config.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
client/src/: App.css  App.tsx  cartridgeConnector.tsx  index.css  main.tsx  vite.config.ts
client/src/api/: vrf.ts
client/src/contexts/: music.tsx
client/src/dojo/: DojoContext.tsx  context.tsx  contractComponents.tsx  createClientComponents.tsx  createSystemCalls.tsx  models.ts  setup.ts  systems.ts  useDojo.tsx
client/src/helpers/: screen.ts
client/src/hooks/: useGame.tsx  useGames.tsx  useIsPwa.tsx  usePlayer.tsx
client/src/stores/: game.ts
client/src/ui/: constants.ts
client/src/ui/actions/: Create.tsx  Discard.tsx  Flip.tsx  (+8 more)
client/src/utils/: index.tsx
contracts/: Scarb.toml
contracts/manifests/dev/: manifest.json  manifest.toml
contracts/manifests/sepolia/: manifest.json  manifest.toml
contracts/manifests/slot/: manifest.json  manifest.toml
contracts/src/: constants.cairo  lib.cairo  store.cairo
contracts/src/components/: manageable.cairo  playable.cairo
contracts/src/helpers/: packer.cairo
contracts/src/models/: game.cairo  index.cairo  moves.cairo  player.cairo
contracts/src/systems/: actions.cairo
contracts/src/tests/: setup.cairo  test_start.cairo
contracts/src/types/: achievement.cairo  action.cairo  card.cairo  deck.cairo  price.cairo  resource.cairo  side.cairo
(+130 files in other folders)
