[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
starknet-crypto = "0.6.1"
starknet-ff = "0.3.7"
thiserror = "1.0.60"
dotenv = "0.15.0"